--- a/01_first_app/index.html
+++ b/01_first_app/index.html
@@ -12,6 +12,7 @@
     <p>Welcome to <i>Learning JavaScript, 3rd Edition</i>.</p>
     <!-- i : 이탤릭체 -->
     <canvas id="mainCanvas"></canvas>
+    <!-- 순서도중요함 제이쿼리 우선, 마지막에 index.js -->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.25/paper-full.min.js"> </script>
     <script src="index.js"></script>
