--- a/01_first_app/index.html
+++ b/01_first_app/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First app</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <script>
+      function funcA() {
+        alert("DOM tree가 완성되었습니다");
+        alert(`이미지 사이즈: ${img.offsetWidth} x ${img.offsetHeight}`);
+      }
+
+      document.addEventListener("DOMContentLoaded", funcA);
+    </script>
+    <img id="img" src="https://picsum.photos/200/300?random=1" alt="test" />
+
     <h1>My first application!</h1>
     <p>Welcome to <i>Learning JavaScript, 3rd Edition</i>.</p>
     <!-- i : 이탤릭체 -->
     <canvas id="mainCanvas"></canvas>
     <!-- 순서도중요함 제이쿼리 우선, 마지막에 index.js -->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.25/paper-full.min.js"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.25/paper-full.min.js"></script>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
